# nih-plug

./: .gitmodules  CHANGELOG.md  Cargo.toml  GETTING_STARTED.md  README.md  bundler-example.toml
.github/workflows/: build.yml  docs.yml  test.yml
.woodpecker/: test.yaml
baseview-adapters/egui-baseview/: Cargo.toml  LICENSE-APACHE  README.md
baseview-adapters/egui-baseview/examples/: render_test.rs  simple_demo.rs
baseview-adapters/egui-baseview/src/: lib.rs  renderer.rs  window.rs
baseview-adapters/iced-baseview/: Cargo.toml  LICENSE-APACHE  README.md
baseview-adapters/iced-baseview/examples/: hello_world.rs  slider.rs
baseview-adapters/iced-baseview/src/: application.rs  error.rs
baseview-adapters/iced-baseview/src/application/: timed.rs
baseview-adapters/iced-baseview/src/shell/: clipboard.rs  conversion.rs  mod.rs  settings.rs  system.rs  window.rs
baseview-adapters/iced-baseview/src/shell/window/: state.rs
baseview-adapters/iced_baseview/: Cargo.toml  README.md
baseview-adapters/iced_baseview/examples/: counter.rs  hello_world_iced.rs  slider.rs  text_input.rs
baseview-adapters/iced_baseview/src/: lib.rs  time.rs
baseview-adapters/iced_baseview/src/shell/: clipboard.rs  mod.rs  settings.rs  window.rs
baseview-adapters/iced_baseview/src/shell/window/: state.rs
crates/cargo-nice-plug/: Cargo.toml  README.md
crates/cargo-nice-plug/src/: main.rs
crates/egui-baseview/: Cargo.toml  README.md
crates/egui-baseview/examples/: hello_world.rs  render_test.rs
crates/egui-baseview/src/: window.rs
crates/egui-baseview/src/renderer/wgpu/: renderer.rs
crates/nice-log/: Cargo.toml  README.md
crates/nice-log/examples/: basic.rs  filtered.rs
crates/nice-log/src/: builder.rs  lib.rs  logger.rs  platform.rs
crates/nice-plug/: Cargo.toml
crates/nice-plug-core/: Cargo.toml  README.md
crates/nice-plug-core/src/: buffer.rs  debug.rs  editor.rs  lib.rs  midi.rs  params.rs  plugin.rs  util.rs
crates/nice-plug-core/src/context/: gui.rs
crates/nice-plug-core/src/params/: boolean.rs  enums.rs  float.rs  integer.rs  internals.rs  persist.rs  range.rs  smoothing.rs
crates/nice-plug-core/src/plugin/: state.rs  track_info.rs
crates/nice-plug-core/src/util/: stft.rs
crates/nice-plug-derive/: Cargo.toml  README.md
crates/nice-plug-derive/src/: params.rs
crates/nice-plug-egui/: Cargo.toml  README.md
crates/nice-plug-egui/src/: editor.rs  lib.rs  resizable_window.rs
crates/nice-plug-iced/: Cargo.toml  README.md
crates/nice-plug-iced/src/: application.rs  editor.rs  lib.rs
crates/nice-plug-iced/src/application/: timed.rs
crates/nice-plug-xtask/: Cargo.toml  README.md
crates/nice-plug-xtask/src/: lib.rs  util.rs
crates/nice-plug/src/: prelude.rs
crates/nice-plug/src/event_loop/: macos.rs  windows.rs
crates/nice-plug/src/wrapper/: clap.rs  standalone.rs  state.rs  util.rs  vst3.rs
crates/nice-plug/src/wrapper/clap/: wrapper.rs
crates/nice-plug/src/wrapper/standalone/: config.rs  wrapper.rs
crates/nice-plug/src/wrapper/standalone/backend/: cpal.rs  jack.rs
crates/nice-plug/src/wrapper/vst3/: context.rs  factory.rs  inner.rs  note_expressions.rs  param_units.rs  util.rs  view.rs  wrapper.rs
crates/nih_plug/: Cargo.toml
crates/nih_plug/src/: editor.rs  lib.rs  prelude.rs
crates/nih_plug/src/event_loop/: background_thread.rs  macos.rs  windows.rs
crates/nih_plug/src/wrapper/: clap.rs  standalone.rs  state.rs  util.rs  vst3.rs
crates/nih_plug/src/wrapper/clap/: context.rs  descriptor.rs  features.rs  util.rs  wrapper.rs
crates/nih_plug/src/wrapper/standalone/: backend.rs  config.rs  context.rs  wrapper.rs
crates/nih_plug/src/wrapper/standalone/backend/: cpal.rs  dummy.rs  jack.rs
crates/nih_plug/src/wrapper/util/: buffer_management.rs  context_checks.rs
crates/nih_plug/src/wrapper/vst3/: context.rs  factory.rs  inner.rs  note_expressions.rs  subcategories.rs  util.rs  view.rs  wrapper.rs
crates/nih_plug_core/: Cargo.toml  README.md
crates/nih_plug_core/src/: audio_setup.rs  buffer.rs  editor.rs  event_loop.rs  lib.rs  midi.rs  params.rs  plugin.rs  util.rs
crates/nih_plug_core/src/context/: gui.rs  init.rs  process.rs  remote_controls.rs
crates/nih_plug_core/src/event_loop/: background_thread.rs  linux.rs  macos.rs  windows.rs
crates/nih_plug_core/src/params/: boolean.rs  enums.rs  float.rs  integer.rs  persist.rs  range.rs  smoothing.rs
crates/nih_plug_core/src/plugin/: state.rs
crates/nih_plug_core/src/util/: stft.rs
crates/nih_plug_derive/: Cargo.toml  README.md
crates/nih_plug_egui/: Cargo.toml  README.md
crates/nih_plug_egui/src/: editor.rs  lib.rs  resizable_window.rs
crates/nih_plug_egui/src/widgets/: generic_ui.rs  param_slider.rs
crates/nih_plug_iced/: Cargo.toml  README.md
crates/nih_plug_iced/src/: application.rs  editor.rs  lib.rs
crates/nih_plug_iced/src/application/: editor_state.rs  timed.rs
crates/nih_plug_xtask/src/: lib.rs
crates/xtask/: Cargo.toml
examples/byo_gui_gl/: Cargo.toml  README.md
examples/byo_gui_gl/src/: lib.rs  main.rs
examples/byo_gui_softbuffer/: Cargo.toml  README.md
examples/byo_gui_softbuffer/src/: lib.rs  main.rs
examples/byo_gui_wgpu/: Cargo.toml  README.md
examples/byo_gui_wgpu/src/: lib.rs  main.rs
examples/gain/: Cargo.toml
examples/gain/src/: lib.rs
examples/gain_egui/: Cargo.toml  README.md
examples/gain_egui/src/: lib.rs  main.rs
examples/gain_iced/: Cargo.toml
examples/gain_iced/src/: lib.rs  main.rs
examples/iced_audio_widget/: Cargo.toml  README.md
examples/iced_audio_widget/src/: lib.rs  main.rs
examples/midi_inverter/: Cargo.toml
examples/midi_inverter/src/: lib.rs
examples/poly_mod_synth/: Cargo.toml
examples/poly_mod_synth/src/: lib.rs
examples/sine/: Cargo.toml
examples/sine/src/: lib.rs  main.rs
examples/stft/: Cargo.toml
examples/stft/src/: lib.rs
examples/sysex/: Cargo.toml
examples/sysex/src/: lib.rs
src/wrapper/clap/: wrapper.rs
