[package]
name = "egui-baseview"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
description = "A baseview backend for egui"
keywords = ["gui", "nih-plug", "plugin", "clap", "vst3"]
categories = ["gui"]
readme = "README.md"

[features]
default = ["opengl", "tracing"]
opengl = ["dep:egui_glow", "baseview/opengl"]
wgpu = ["dep:egui-wgpu", "dep:raw-window-handle-06", "dep:pollster", "dep:wgpu"]
## Enables a temporary workaround for keyboard input not working sometimes.
## See https://github.com/BillyDM/egui-baseview/issues/20
keyboard_focus_workaround = []
## Enables logging using NIH-plug's logging feature
nih_log = ["dep:nih_plug_core"]
## Enable this if `nih_log` is disabled
tracing = ["dep:tracing"]

[dependencies]
baseview.workspace = true
raw-window-handle.workspace = true
egui.workspace = true
egui_glow = { version = "0.34.1", features = ["x11"], optional = true }
egui-wgpu = { version = "0.34.1", features = ["x11"], optional = true }
wgpu = { version = "29", optional = true }
keyboard-types = { version = "0.6", default-features = false }
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6", optional = true }
copypasta = { version = "0.10", default-features = false, features = ["x11"] }
nih_plug_core = { path = "../../crates/nih_plug_core", version = "0.1", optional = true }
tracing = { workspace = true, optional = true }
open.workspace = true
pollster = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
egui = { version = "0.34.1", features = ["default_fonts"] }
baseview = { workspace = true, features = ["opengl"] }
