[package]
name = "nih_plug_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enabling this feature will cause the plugin to terminate when allocations
# occur in the processing function during debug builds. Keep in mind that panics
# may also allocate if they use string formatting, so temporarily disabling this
# feature may be necessary when debugging panics in DSP code.
assert_process_allocs = ["dep:nih_assert_no_alloc"]
# Add adapters to the Buffer object for reading the channel data to and from
# `std::simd` vectors. Requires a nightly compiler.
simd = []
# Only relevant when generating docs, adds the `doc_auto_cfg` nightly feature
docs = []

[dependencies]
nih_plug_derive = { path = "../nih_plug_derive", version = "0.1" }
nih_assert_no_alloc = { version = "1.0", features = ["backtrace", "log"], optional = true }
log = "0.4"
atomic_float.workspace = true
bitflags.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
atomic_refcell.workspace = true
crossbeam-utils = "0.8.21"
midi-consts = "0.1"
raw-window-handle.workspace = true

[dev-dependencies]
approx.workspace = true
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_info",
] }
