[package]
name = "nih_plug_egui"
version = "0.1.0"
authors = [
    "Billy Messenger <billydm@noreply.codeberg.org>",
    "Robbert van der Helm <mail@robbertvanderhelm.nl>",
]
description = "An adapter to use egui GUIs with NIH-plug"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["opengl"]
opengl = ["egui-baseview/opengl"]
wgpu = ["egui-baseview/wgpu"]
## Enables a temporary workaround for keyboard input not working sometimes.
## See https://github.com/BillyDM/egui-baseview/issues/20
keyboard_focus_workaround = ["egui-baseview/keyboard_focus_workaround"]

[dependencies]
raw-window-handle.workspace = true
nih_plug_core = { path = "../nih_plug_core", version = "0.1" }
egui-baseview = { path = "../../baseview-adapters/egui-baseview", default-features = false, features = [
    "nih_log",
] }
egui.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
# To make the state persistable
serde.workspace = true
