[package]
name = "byo_gui_softbuffer"
version = "0.1.0"
edition.workspace = true
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
license.workspace = true
description = "A simple example plugin with a raw Softbuffer context for rendering"
publish = false

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { path = "../../crates/nih_plug", features = [
    "assert_process_allocs",
    "standalone",
] }
baseview = { workspace = true, features = ["opengl"] }
softbuffer = { version = "0.4.6", default-features = false, features = [
    "kms",
    "x11",
] }
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
crossbeam.workspace = true
atomic_float.workspace = true
# To make the state persistable
serde.workspace = true
