[package]
name = "byo_gui_wgpu"
version = "0.1.0"
edition = "2024"
license = "ISC"
repository = "https://codeberg.org/RustAudio/nice-plug"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
description = "A simple example plugin with a raw WGPU context for rendering"
publish = false

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nice-plug = { path = "../../crates/nice-plug", version = "0.1.0", features = [
    "assert_process_allocs",
    "standalone",
] }
baseview = { version = "0.1.1", features = ["opengl"] }
wgpu = "29"
# Reduce wgpu log spam
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing = { version = "0.1", features = [
    "max_level_info",
    "release_max_level_info",
] }
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
pollster = "0.4.0"
crossbeam = "0.8"
atomic_float = "1.1"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
