[package]
name = "gain_iced"
version = "0.1.0"
authors = [
    "Billy Messenger <billydm@noreply.codeberg.org>",
    "Robbert van der Helm <mail@robbertvanderhelm.nl>",
]
description = "A simple gain plugin with an egui GUI"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { path = "../../crates/nih_plug", default-features = true, features = [
    "assert_process_allocs",
    "standalone",
] }
nih_plug_iced = { path = "../../crates/nih_plug_iced", version = "0.1.1" }
atomic_float.workspace = true
# Important: `wgpu` is extremely spammy with its logs, so disable it by adding these crates:
log = { version = "0.4", features = ["max_level_debug"] }
tracing = { version = "0.1.44", default-features = true, features = [
    "max_level_info",
] }
