[package]
name = "stft"
version = "0.1.0"
edition.workspace = true
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nice-plug = { path = "../../crates/nice-plug", version = "0.1.0", features = [
    "assert_process_allocs",
] }
realfft.workspace = true
